--- a/cly/src/main/resources/application.properties
+++ b/cly/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 
 xingming: chenglianying
