--- a/cly/pom.xml
+++ b/cly/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.example</groupId>
-	<artifactId>cly</artifactId>
+	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>cly</name>
+	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
